==> xavieps/seda/Libraries/TouchPanel/TouchPanel.c <==
#include "GLCD.h"
#include "TouchPanel.h"
#define SSP_SR_RNE      ((uint32_t)(1<<2))
#define SSP_SR_BSY      ((uint32_t)(1<<4))
#define SSP_STAT_RXFIFO_NOTEMPTY	((uint32_t)(1<<2))
#define SSP_STAT_BUSY				((uint32_t)(1<<4))
#define THRESHOLD 60 /* Be careful: this parameter should be tuned for your board

void TP_Init(void) 
{ 
	//PINSEL_CFG_Type PinCfg;
//    SSP_CFG_Type SSP_ConfigStruct;

	/*
	 * Initialize SPI pin connect
	 * P0.6  - TP_CS - used as GPIO
	 * P0.7  - TP_SCK
	 * P0.8  - TP_SDO
	 * P0.9  - TP_SDI
	 * P2.13 - TP_IRQ - used as GPIO
	 */
//	PinCfg.Funcnum = 2;
//	PinCfg.OpenDrain = 0;
//	PinCfg.Pinmode = 0;
//	PinCfg.Portnum = 0;
//	PinCfg.Pinnum = 7;
//	PINSEL_ConfigPin(&PinCfg);
//	PinCfg.Pinnum = 8;
//	PINSEL_ConfigPin(&PinCfg);
//	PinCfg.Pinnum = 9;
//	PINSEL_ConfigPin(&PinCfg);
	
	
//	PinCfg.Funcnum = 0;
//	PinCfg.Portnum = 0;
//	PinCfg.Pinnum = 6;
//	PINSEL_ConfigPin(&PinCfg);

	LPC_PINCON->PINSEL0 &= ~(0x3F<<14 | 0x3<<12); // 00 -> PINSEL0 P0.6 .. P0.9
	LPC_PINCON->PINSEL0 |= 0x2A<<14; // P0.7 .. P0.9 -> SSP1


//	PinCfg.Funcnum = 0;
//	PinCfg.Portnum = 2;
//	PinCfg.Pinnum = 13;
//	PINSEL_ConfigPin(&PinCfg);

	LPC_PINCON->PINSEL4 &= ~(0x3<<26); // P2.13 -> GPIO



   /* P2.13 TP_IRQ is Input */
//   GPIO_SetDir(TP_IRQ_PORT_NUM, (1<<TP_IRQ_PIN_NUM), 0);
//	GPIO_SetValue(TP_IRQ_PORT_NUM, (1<<TP_IRQ_PIN_NUM));

	LPC_GPIO2->FIODIR &= ~(1<<13);
	LPC_GPIO2->FIOSET = 1<<13;
	
   /* P0.6 TP_CS is output */
//   GPIO_SetDir(TP_CS_PORT_NUM, (1<<TP_CS_PIN_NUM), 1);
//	GPIO_SetValue(TP_CS_PORT_NUM, (1<<TP_CS_PIN_NUM)); 


	LPC_GPIO0->FIODIR |= 1<<6;
	LPC_GPIO0->FIOSET = 1<<6;

//	/* initialize SSP configuration structure to default */
//	SSP_ConfigStructInit(&SSP_ConfigStruct);
//	SSP_ConfigStruct.ClockRate = 500000;
//	/* Initialize SSP peripheral with parameter given in structure above */
//	SSP_Init(LPC_SSP1, &SSP_ConfigStruct);

//	/* Enable SSP peripheral */
//	SSP_Cmd(LPC_SSP1, ENABLE);
	
	LPC_SSP1->CR0 = 0x1807;
	LPC_SSP1->CR1 = 2;
}

static uint8_t WR_CMD (uint8_t cmd)  
{ 
	/* wait for current SSP activity complete */
//	while (SSP_GetStatus(LPC_SSP1, SSP_STAT_BUSY) ==  SET);

	while(LPC_SSP1->SR & SSP_STAT_BUSY);

	//SSP_SendData(LPC_SSP1, (uint16_t) cmd);
	LPC_SSP1->DR =cmd;

	//while (SSP_GetStatus(LPC_SSP1, SSP_STAT_RXFIFO_NOTEMPTY) == RESET);
	
	while((LPC_SSP1->SR & SSP_STAT_RXFIFO_NOTEMPTY)==0);

	//return (SSP_ReceiveData(LPC_SSP1));
	return(LPC_SSP1->DR);
}
